tests/fixtures/invalid/dict_bitxor_float.py
# Cannot bitwise XOR Dict[str, int] and Float
x: float = {"a": 1} ^ 1.0
